# python-package-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Makefile  README.md  package.json
.github/: dependabot.yml
.github/workflows/: changelog.yaml  release.yaml
package_name/: __init__.py
release/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  install-package.py  install-package.sh  pyproject.toml  requirements.txt  tox.ini
release/.github/workflows/: build.yaml  codeql.yml  coverage.yaml  publish-test.yaml  publish.yaml  push-docker.yaml  release.yaml  tox.yaml
release/.hooks/: update-poetry-dependencies.sh
release/docs/: CONTRIBUTING.md
release/package_name/: __init__.py  configs.py  configs.yaml  inputs.py  logger.py  main.py  proxy.py  run.py  utility.py
release/package_name/data/: configs.yaml
release/package_name/db/: db_service.py  sqlite.py
release/tests/: test_main.py
tests/: test_main.py
