[tool.poetry]
name = "package-name"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLV3"
readme = "README.md"
packages = [{ include = "package_name" }]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
pytest = "^7.2.2"
pylint = "^2.17.0"
isort = "^5.12.0"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
