# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "package-name"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLV3"
readme = "README.md"
repository = "https://github.com/USER_NAME/REPO"
keywords = []
packages = [{ include = "package_name" }]

[tool.poetry.dependencies]
python = "^3.10"
on_rails = "4.2.0"
pylity = "0.0.10"
Inject = "4.3.1"
PyYAML = "6.0"
pydantic = "1.10.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
pytest = "^7.2.2"
pylint = "^2.17.0"
isort = "^5.12.0"
coverage = "^7.2.2"
tox = "^4.4.7"
tox-gh-actions = "^3.1.0"

[tool.poetry.scripts]
my-script = "package_name.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
